feat(ui): add marquee, more work on the components and docs

--- a/apps/web/src/components/BlocksNav.astro
+++ b/apps/web/src/components/BlocksNav.astro
@@ -10,7 +10,7 @@ const currentBlock = Astro.url.pathname.split("/").pop();
 ---
 
 <div class="not-content mb-20">
-  <ul class="list-none flex gap-2">
+  <ul class="list-none flex gap-2 pl-0">
     <li>
       <Button
         as="a"
