--- a/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
@@ -28,6 +28,7 @@ const isRtl = dir === "rtl";
             href={isRtl ? next.href : prev.href}
             variant="secondary"
             size="sm"
+            class="size-8.5"
           >
             <ArrowLeft size="1.5rem" />
           </Button>
@@ -38,6 +39,7 @@ const isRtl = dir === "rtl";
             href={isRtl ? prev.href : next.href}
             variant="secondary"
             size="sm"
+            class="size-8.5"
           >
             <ArrowRight size="1.5rem" />
           </Button>
