--- a/apps/web/src/pages/blocks/features/1.astro
+++ b/apps/web/src/pages/blocks/features/1.astro
@@ -1,7 +1,7 @@
 ---
 import BlockExampleLayout from "@/components/BlockExampleLayout.astro";
 import Footer from "@bejamas/ui/components/Footer.astro";
-import FooterLinks from "@bejamas/ui/components/FooterLinks.astro";
+import LinkGroup from "@bejamas/ui/components/LinkGroup.astro";
 import Button from "@bejamas/ui/components/Button.astro";
 import Separator from "@bejamas/ui/components/Separator.astro";
 import Card from "@bejamas/ui/components/Card.astro";
