--- a/packages/ui/src/components/Footer.astro
+++ b/packages/ui/src/components/Footer.astro
@@ -5,9 +5,9 @@
  * @description Footer component for the page.
  * @status stable
  * @since 0.1.0
- * 
+ *
  * @example
- * 
+ *
  * <Footer>
  *   <div slot="cta">
  *     <h2>Call to action</h2>
@@ -15,14 +15,14 @@
  *   </div>
  *   <div class="grid grid-cols-4 gap-4">
  *   <div>Acme, Inc. Logo</div>
- *   <FooterLinks
+ *   <LinkGroup
  *     title="Resources"
  *     items={[
  *       { label: "Blog", href: "/blog" },
  *       { label: "Documentation", href: "/docs" }
  *     ]}
  *   />
- *   <FooterLinks
+ *   <LinkGroup
  *     title="Company"
  *     items={[
  *       { label: "Home", href: "/" },
@@ -31,38 +31,42 @@
  *   />
  *   </div>
  * </Footer>
- * 
+ *
  * @usage
- * 
+ *
  * ## Structure
- * 
+ *
  * A Footer component is composed of the following parts:
  *
  * - `Footer.astro` - The footer container.
- * - `FooterLinks.astro` - Links within the footer.
+ * - `LinkGroup.astro` - Links within the footer.
  *
  * ```astro
  * ---
  * import Footer from '@bejamas/ui/components/Footer.astro';
  * ---
- * 
+ *
  * <Footer />
- * 
+ *
  * ```
- * 
+ *
  */
 
 import { cn } from "../lib/utils";
 
 const { class: className = "", ...props } = Astro.props;
-
 ---
 
-<footer class={cn("bg-footer text-footer-foreground w-full", className)} {...props}>
-  {Astro.slots.cta && (
-    <div class="flex justify-center">
-      <slot name="cta" />
-    </div>
-  )}
+<footer
+  class={cn("bg-footer text-footer-foreground w-full", className)}
+  {...props}
+>
+  {
+    Astro.slots.cta && (
+      <div class="flex justify-center">
+        <slot name="cta" />
+      </div>
+    )
+  }
   <slot />
 </footer>
