feat: improve docs generation, add action for canary publish

--- a/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
+++ b/packages/starlight-theme-bejamas/src/overrides/PageTitle.astro
@@ -27,8 +27,7 @@ const isRtl = dir === "rtl";
             as="a"
             href={isRtl ? next.href : prev.href}
             variant="secondary"
-            size="sm"
-            class="size-8.5"
+            size="icon-sm"
           >
             <ArrowLeft size="1.5rem" />
           </Button>
@@ -38,8 +37,7 @@ const isRtl = dir === "rtl";
             as="a"
             href={isRtl ? prev.href : next.href}
             variant="secondary"
-            size="sm"
-            class="size-8.5"
+            size="icon-sm"
           >
             <ArrowRight size="1.5rem" />
           </Button>
