--- a/apps/web/src/pages/blocks/[slug].astro
+++ b/apps/web/src/pages/blocks/[slug].astro
@@ -1,4 +1,8 @@
 ---
+import type {
+  GetStaticPaths,
+} from "astro";
+
 import StarlightPage from "@astrojs/starlight/components/StarlightPage.astro";
 
 import { getCollection, getEntry, render } from "astro:content";
@@ -13,7 +17,7 @@ export async function getStaticPaths() {
   return blocks.map((block) => ({
     params: { slug: block.id },
   }));
-}
+} satisfies GetStaticPaths;
 ---
 
 <script src="//unpkg.com/alpinejs" defer></script>
