--- a/packages/starlight-theme-bejamas/src/styles/theme.css
+++ b/packages/starlight-theme-bejamas/src/styles/theme.css
@@ -80,9 +80,9 @@
     padding-inline: 0.5rem;
     padding-block: 0.375rem;
     border-radius: 0.5rem;
-    transition-property: color, background-color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 0.15s;
+    /* transition-property: color, background-color;
+    transition-timing-function: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    transition-duration: 0.05s; */
     display: inline-block;
   }
 
@@ -245,7 +245,7 @@
   .sl-bejamas-component-preview {
     min-height: 450px;
     padding: 1rem;
-    border: 1px dashed var(--border);
+    border: 1px solid var(--border);
     border-radius: 0.5rem;
     display: flex;
     justify-content: center;
@@ -271,5 +271,22 @@
     border-bottom: 0;
     padding: 0;
     display: inline-block;
+  }
+
+  .sl-markdown-content :is(th, td):not(:where(.not-content *)) {
+    min-width: 10rem;
+    padding-inline: 1rem;
+    border-color: var(--border);
+  }
+
+  .sl-markdown-content
+    :is(tr):last-child
+    :is(th, td):not(:where(.not-content *)) {
+    border-bottom: 0;
+  }
+
+  .sl-markdown-content table:not(:where(.not-content *)) {
+    border: 1px solid var(--border);
+    border-radius: calc(var(--radius) - 2px);
   }
 }
