--- a/packages/ui/src/components/Button.astro
+++ b/packages/ui/src/components/Button.astro
@@ -133,7 +133,7 @@ const {
 } = Astro.props as Props;
 
 const buttonVariants = cva(
-  "inline-flex ease-in-out border-border items-center justify-center gap-2 whitespace-nowrap rounded-lg font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive active:scale-98",
+  "inline-flex ease-out duration-150 border-border items-center justify-center gap-2 whitespace-nowrap rounded-lg font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive active:scale-98",
   {
     variants: {
       variant: {
@@ -150,10 +150,10 @@ const buttonVariants = cva(
         link: "text-accent-foreground underline-offset-4 hover:underline p-0",
       },
       size: {
-        default: "h-9.5 px-4 py-2 text-sm has-[.badge:last-child]:pr-1.5 ",
+        default: "h-9 px-4 py-2 text-sm has-[.badge:last-child]:pr-1.5 ",
         sm: "h-8.5 text-xs rounded-lg gap-1.5 px-3.5 has-[>svg]:px-2.5",
         lg: "h-10 text-sm rounded-lg px-4 has-[>svg]:px-4 has-[.badge:last-child]:pr-3 [&_.badge:last-child]:ml-1.5",
-        icon: "size-9.5",
+        icon: "size-9",
         "icon-sm": "size-8.5",
         "icon-lg": "size-10",
       },
